<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/bbConsentBGColor">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBarCommon"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="#00000000"
            android:minHeight="?android:attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:theme="@style/ToolBarStyle"
            app:titleTextColor="@color/bbConsentPrimaryTitleTextColor" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolBarCommon">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/bb_consent_data_attribute_detail_consent"
                    android:textAllCaps="true"
                    android:textColor="@color/bbConsentTextColorLight"
                    android:textSize="@dimen/text_size_medium" />

                <LinearLayout
                    android:id="@+id/llAllow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/bbConsentWhite"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="5dp"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/bb_consent_data_attribute_allow"
                        android:textColor="@color/bbConsentTextColor"
                        android:textSize="@dimen/text_size_medium" />

                    <ImageView
                        android:id="@+id/ivAllow"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_checked"
                        android:visibility="gone" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/bb_consent_divider_color" />

                <LinearLayout
                    android:id="@+id/llDisallow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bbConsentWhite"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="5dp"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/bb_consent_dashboard_disallow"
                        android:textColor="@color/bbConsentTextColor"
                        android:textSize="@dimen/text_size_medium" />

                    <ImageView
                        android:id="@+id/ivDisallow"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_checked"
                        android:visibility="gone" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/bb_consent_divider_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bbConsentWhite"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="@string/bb_consent_data_attribute_detail_ask_me"
                            android:textColor="@color/bbConsentTextColor"
                            android:textSize="@dimen/text_size_medium" />

                        <TextView
                            android:id="@+id/tvDays"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="-- days"
                            android:textColor="@color/bbConsentTextColorLight"
                            android:textSize="@dimen/text_size_medium" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="30"
                            android:textColor="@color/bbConsentTextColorLight"
                            android:textSize="@dimen/text_size_medium" />

                        <SeekBar
                            android:id="@+id/sbDays"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:max="90"
                            android:min="30"
                            android:progress="30"
                            android:progressBackgroundTint="@color/bbConsentTextColor"
                            android:progressTint="@color/bb_consent_accent_blue" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="90"
                            android:textColor="@color/bbConsentTextColorLight"
                            android:textSize="@dimen/text_size_medium" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/ctvStatusMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/bb_consent_data_attribute_detail_allow_consent_rule"
                    android:textColor="@color/bbConsentTextColorLight"
                    android:textSize="@dimen/text_size_medium" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/llProgressBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:animateLayoutChanges="true"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolBarCommon">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>